exercice1_install_and_start.txt
 python
Python 3.8.6 (default, Jan 27 2021, 15:42:20)
[GCC 10.2.0] on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> (1+2)**3
27
>>> "Da"+3
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: can only concatenate str (not "int") to str
>>> "Da"*4
'DaDaDaDa'

 python
Python 3.8.6 (default, Jan 27 2021, 15:42:20)
[GCC 10.2.0] on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> str(4)*int(33")
  File "<stdin>", line 1
    str(4)*int(33")
                  ^
SyntaxError: EOL while scanning string literal
>>> str(4)*int("3")
'444'
>>> int("3") + float("3.2")
6.2
>>> str(3)*float("3.2")
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: can't multiply sequence by non-int of type 'float'
>>> str(3)*float(3.2)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: can't multiply sequence by non-int of type 'float'
>>> str(3/4)*2
'0.750.75'
>>> 5%2
1
>>> 5//2
2
>>> 5/2
2.5
>>> ("Da"*4)/2
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: unsupported operand type(s) for /: 'str' and 'int'
>>> ("Pa"+"La")*2
'PaLaPaLa'
>>> "Da"+3
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: can only concatenate str (not